using UnityEngine;

namespace My2D
{
    //애니메이션 파라미터 이름을 정의하는 클래스
    public class AnimationString
    {
        #region Variables
        public static string IsMove = "IsMove";
        public static string IsRun = "IsRun";
        public static string IsGround = "IsGround";
        public static string IsCeiling = "IsCeiling";
        public static string JumpTrigger = "JumpTrigger";
        public static string Yvelocity = "Yvelocity";
        public static string IsWall = "IsWall";
        public static string AttackTrigger = "AttackTrigger";
        #endregion
    }
}